package com.abadzheva.tasks.view

import android.os.Bundle
import androidx.appcompat.app.AppCompatActivity
import com.abadzheva.tasks.R

class MainActivity : AppCompatActivity() {
    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setContentView(R.layout.activity_main)
    }
}
