@startuml
package "tasks.model" {
    class Task {
        +taskId: Long
        +taskName: String
        +taskDone: Boolean
    }

    interface TaskDao {
        +suspend insert(task: Task): void
        +suspend update(task: Task): void
        +suspend delete(task: Task): void
        +get(taskId: Long): LiveData<Task>
        +getAll(): LiveData<List<Task>>
    }

    abstract class TaskDatabase {
        TaskDatabase : <<RoomDatabase>>
        +taskDao: TaskDao
        +getInstance(context: Context): TaskDatabase
    }

    TaskDao --> Task : "Использует"
    TaskDatabase --> TaskDao : "Содержит"
    TaskDatabase --> Task : "Объявляет как сущность"
}

package "tasks.presentation" {
    class MainActivity {
        MainActivity : <<Activity>>
        +onCreate(savedInstanceState: Bundle): void
    }

    class TasksFragment {
        TasksFragment : <<Fragment>>
        +onCreateView(inflater: LayoutInflater, container: ViewGroup?, savedInstanceState: Bundle?): View?
        +onDestroyView(): void
    }

    class TaskItemAdapter {
        TaskItemAdapter : <<ListAdapter<Task, TaskItemViewHolder>>>
        +getItemCount(): Int
        +onCreateViewHolder(parent: ViewGroup, viewType: Int): TaskItemViewHolder
        +onBindViewHolder(holder: TaskItemViewHolder, position: Int): void
        +submitList(list: List<Task>): void
    }

    class TaskItemViewHolder {
        +taskName: TextView
        +taskDone: CheckBox
        +bind(item: Task): void
        +inflateFrom(parent: ViewGroup): TaskItemViewHolder
    }

    class TaskDiffItemCallback {
        TaskDiffItemCallback : <<DiffUtil.ItemCallback<Task>>>
        +areItemsTheSame(oldItem: Task, newItem: Task): Boolean
        +areContentsTheSame(oldItem: Task, newItem: Task): Boolean
    }

    TaskItemAdapter --> TaskItemViewHolder : "Создает"
    TaskItemViewHolder --> Task : "Использует"
    TaskItemAdapter --> TaskDiffItemCallback : "Использует"
    TasksFragment --> TaskItemAdapter : "Использует для отображения задач"
}

package "tasks.viewmodel" {
    class TasksViewModel {
        TasksViewModel : <<ViewModel>>
        +newTaskName: String
        +tasks: LiveData<List<Task>>
        +addTask(): void
    }

    class TasksViewModelFactory {
        TasksViewModelFactory : <<ViewModelProvider.Factory>>
        +create(modelClass: Class<T>): T
    }
}

' Связи между компонентами
TasksFragment --> TasksViewModelFactory : "Создает"
TasksFragment --> TasksViewModel : "Создает"
TasksViewModelFactory --> TaskDao : "Использует"

TasksViewModel --> TaskDao : "Использует"
TasksViewModel --> Task : "Использует"
TasksFragment --> TaskDatabase : "Доступ к taskDao"
MainActivity --> TasksFragment : "Навигация"
TasksFragment --> TaskItemAdapter : "Использует для отображения задач"
TaskItemAdapter --> Task : "Использует в data"
@enduml
